# rust_workshop

./: Cargo.toml  README.md  feature_overview.rs  saved_boards.json
game_of_life/: Cargo.toml
game_of_life/src/: main.rs
gui/: Cargo.toml
gui/src/: board.rs  grid.rs  gui.rs  lib.rs  simple_display.rs
hello_basics/: Cargo.toml
hello_basics/src/: main.rs
hello_basics/src/solutions/: task1.rs  task2.rs  task3.rs  task4.rs
hello_cellular/: Cargo.toml
hello_cellular/src/: main.rs
hello_cellular/src/solutions/: task1.rs  task2.rs  task3.rs  unit_test.rs
hello_life/: Cargo.toml
hello_life/src/: main.rs
hello_life/src/solutions/: task1.rs  task10.rs  task2.rs  task3.rs  task4.rs  task5.rs  task6.rs  task7.rs  task8.rs  task9.rs
wire_world/: Cargo.toml
wire_world/src/: main.rs
